Add lightweight table parser with enhanced formatting and clickable citations
- Implement fast, lightweight table parser (~15KB total)
- Support CSV, TSV, Markdown, and HTML table formats
- Add auto-format detection and parsing
- Enhance table cell formatting (bold, italic, code, line breaks)
- Add clickable citation links with modal functionality
- Implement responsive table design with beautiful styling
- Add table parser demo page at /table-demo.html
- Optimize performance for 1000+ rows processing
- Include fallback parsing for complex cases
- Deploy enhanced table parsing to production

--- a/ultimate-bluetooth-rag/public/index.html
+++ b/ultimate-bluetooth-rag/public/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Si‑Vision | Bluetooth Hybrid RAG Agent</title>
   <link rel="stylesheet" href="/assets/styles.css" />
+  <link rel="stylesheet" href="/assets/table-parser.css" />
 </head>
 <body>
   <!-- Branded header -->
@@ -111,6 +112,8 @@
   <!-- PDF.js and Mammoth for client-side extraction -->
   <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@3.11.174/build/pdf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/mammoth@1.6.0/mammoth.browser.min.js"></script>
+  <!-- Lightweight table parser -->
+  <script src="/assets/table-parser.js"></script>
   <script src="/assets/main.js"></script>
   <!-- Modal for citation context -->
   <div id="modal-panel" class="modal-panel" style="display:none">
